@@ -2,6 +2,8 @@ BBmisc_1.9
 - New argument .newline for messagef
 - New argument suppress.startup for requirePackages
 - requirePackages can now dispatch to requireNamespace (and does that by default)
+  The argument suppress.startup has been removed and the default for argument
+  "why" has changed.
 - New function mapValues
 
 BBmisc_1.8
